Add public config endpoint for registration status (#7)
* Initial plan

* Add public config endpoint to return registration status without auth


---------
